--- a/share/icon-font/index.html
+++ b/share/icon-font/index.html
@@ -5,7 +5,6 @@
         <meta charset="utf-8" />
 	    <meta name="viewport" content="width=1024" />
 	    <meta name="apple-mobile-web-app-capable" content="yes" />
-	    <title></title>
 	    <meta name="author" content="黑幕困兽" />
 	    <link href="../../libs/impress.js/css/impress-demo.css" rel="stylesheet" />
     	<link rel="shortcut icon" href="favicon.png" />
@@ -49,7 +48,6 @@
 
 		</style>
         <script type="text/javascript" src="../../libs/jquery/jquery.1.3.2.js"></script>
-		<script type="text/javascript" src="js/prettify.js"></script>
     </head>
 
     <body class="impress-not-supported">
@@ -379,13 +377,10 @@
 		</script>
 
 		<script src="../../libs/impress.js/js/impress.js"></script>
+        <script src="../../libs/prettify/prettify.js"></script>
 		<script>
 			impress().init();
-        </script>
-        <script>
-			(function(){
-				prettyPrint();
-			})(jQuery);
+			prettyPrint();
         </script>
         
     </body>
