--- a/share/responsive-design/index.html
+++ b/share/responsive-design/index.html
@@ -100,11 +100,20 @@
                     <p><span>Ⅰ、</span>明确需要兼容的设备类型、屏幕尺寸</p>
                     <p><span>Ⅱ、</span>确定几个尺寸，制定不同的线框交互原型</p>
                     <p><span>Ⅲ、</span>设计师根据线框图，设计不同尺寸对应的视觉稿</p>
-                    <p><span>Ⅳ、</span>前端开发</p>
+                    <p><span>Ⅳ、</span>前端进行HTML和CSS编码，并保持和视觉良好的沟通</p>
+                    <p><span>Ⅴ、</span>前后端约定加载、输出的文件和数据</p>
+                    <p>......</p>
                 </div>
             </div>
 
             <div class="step slide" data-x="3500" data-y="1500" data-rotate="180">
+                <h3>Ⅰ、明确需兼容的设备</h3>
+                <div>
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="step slide" data-x="2000" data-y="1500" data-rotate="180">
                 <h3>响应式设计要点</h3>
                 <div>
                     <p><span>Ⅰ、</span>设置Meta标签，避免页面自动缩放尺寸</p>
@@ -114,7 +123,7 @@
                 </div>
             </div>
             
-            <div class="step slide" data-x="2000" data-y="1500" data-rotate="180">
+            <div class="step slide" data-x="500" data-y="1500" data-rotate="180">
 		        <pre class="prettyprint">
                     .icon{
                         font-family: 'somefont'; 
