--- a/share/responsive-design/index.html
+++ b/share/responsive-design/index.html
@@ -23,6 +23,8 @@
             .pic{background: #fff;width: 900px;padding: 60px;text-align: center;}
             .pic img{vertical-align: middle;}
             .txt{color:#0070c0;letter-spacing: 2px;}
+            .note,.note a{padding:5px;font-size:16px;color:#666;font-family:'Paprika';}
+            .tr{text-align:right;}
         </style>
         <script type="text/javascript" src="../../libs/jquery/jquery.1.3.2.js"></script>
     </head>
@@ -48,7 +50,7 @@
                     <p style="font-family:Paprika;">“It is the nature of the web to be flexible, and it should be our role as designers and developers to embrace this flexibility, and produce pages which, by being flexible, are accessible to all.”
                     </p>
 
-                    <p style="text-align:right;font-size:16px;color:#666;font-family:Paprika;">
+                    <p class='note tr'>
                         —  A Dao of Web Design
                     </p>
                 </div>
@@ -107,13 +109,28 @@
             </div>
 
             <div class="step slide" data-x="3500" data-y="1500" data-rotate="180">
-                <h3>Ⅰ、明确需兼容的设备</h3>
+                <h3>Ⅰ、明确需要兼容的设备</h3>
                 <div>
-                    <p></p>
+                    <p>现如今，PC、平板、智能手机屏幕尺寸大小不等，如果要做到完美的适配所有设备还是有技术难度和开发成本。所以我觉得目前“相应式设计”可以先挑选主流的设备作为首要适配目标，其他尺寸的设备做宽度自适应处理。</p>
+
+                    <p class="note">
+                        <a href="http://nmsdvid.com/snippets/">http://nmsdvid.com/snippets/</a>
+                    </p>
                 </div>
             </div>
 
             <div class="step slide" data-x="2000" data-y="1500" data-rotate="180">
+                <h3>Ⅱ、确定几个尺寸</h3>
+                <div>
+                    <p>选好适配的设备类型，我们即可约定几个固定尺寸，以此展开设定相应的区间范围。</p>
+
+                    <p class="note">
+                        <a href="http://nmsdvid.com/snippets/">http://nmsdvid.com/snippets/</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="step slide" data-x="500" data-y="1500" data-rotate="180">
                 <h3>响应式设计要点</h3>
                 <div>
                     <p><span>Ⅰ、</span>设置Meta标签，避免页面自动缩放尺寸</p>
@@ -125,11 +142,8 @@
             
             <div class="step slide" data-x="500" data-y="1500" data-rotate="180">
 		        <pre class="prettyprint">
-                    .icon{
-                        font-family: 'somefont'; 
-                        font-weight: 700;
-                        font-style: normal;
-                    }
+                    http://nmsdvid.com/snippets/
+                    http://www.responsivegridsystem.com/
 		        </pre>
 		    </div>
             
