--- a/share/weekly/2013-04-27/index.html
+++ b/share/weekly/2013-04-27/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=1024" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="author" content="黑幕困兽" />
-        <link href="../../libs/impress.js/css/impress-demo.css" rel="stylesheet" />
+        <link href="../../../libs/impress.js/css/impress-demo.css" rel="stylesheet" />
         <style type="text/css">
             body{background:#28272f;font-family:'微软雅黑';color:#333;}
             #title {font-family:"微软雅黑";}
@@ -203,8 +203,8 @@
 			}
 		</script>
 
-		<script src="../../libs/impress.js/js/impress.js"></script>
-        <script src="../../libs/prettify/prettify.js"></script>
+		<script src="../../../libs/impress.js/js/impress.js"></script>
+        <script src="../../../libs/prettify/prettify.js"></script>
 		<script>
         $(document).ready(function() {
             impress().init();
