--- a/share/weekly/index.html
+++ b/share/weekly/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div>
-            <p><a href="../2013-04-27/index.html">Weekly 2013-04-27</a></p>
+            <p><a href="./2013-04-27/index.html">Weekly 2013-04-27</a></p>
         </div>
         
 	</body>
