--- a/share/weekly/2013-04-27/index.html
+++ b/share/weekly/2013-04-27/index.html
@@ -21,7 +21,7 @@
             .slide p span,.slide p a{color:#A6C828;}
             .slide p em{color:#f00;margin-left: 10px;font-style:normal;}
         </style>
-        <script type="text/javascript" src="../../libs/jquery/jquery.1.3.2.js"></script>
+        <script type="text/javascript" src="../../../libs/jquery/jquery.1.3.2.js"></script>
     </head>
     <body class="impress-not-supported">
         <!--不支持impress.js提示-->
