--- a/share/weekly/2013-04-27/index.html
+++ b/share/weekly/2013-04-27/index.html
@@ -76,9 +76,9 @@
                 <h3>23%的手机用户考虑下一部手机为Windows Phone</h3>
                 <div>
                     <p class="img"><img src="img/11.jpg" /></p>
-                     <p>继Facebook放弃HTML5的移动应用后，LinkedIn也宣布放弃HTML5，而改用原生代码来实现。</p>
+                     <p>调查显示有54.6%用户考虑下一部手机为安卓系统，41.5%的用户选择iPhone，有23%左右的用户选择了Windows Phone。</p>
                     <p style="font-size:16px;">
-                       来源：<a href="http://www.cnbeta.com/articles/235177.htm ">http://www.cnbeta.com/articles/235177.htm</a>
+                       来源：<a href="http://www.cnbeta.com/articles/235177.htm">http://www.cnbeta.com/articles/235177.htm</a>
                     </p>
                 </div>
             </div>
