--- a/share/weekly/2013-04-27/index.html
+++ b/share/weekly/2013-04-27/index.html
@@ -73,7 +73,7 @@
             </div>
 
             <div class="step slide" data-x="2000" data-y="500">
-                <h3>23%的手机用户考虑下一部手机为Windows Phone</h3>
+                <h3>23%用户考虑下一部手机为Windows Phone</h3>
                 <div>
                     <p class="img"><img src="img/11.jpg" /></p>
                      <p>调查显示有54.6%用户考虑下一部手机为安卓系统，41.5%的用户选择iPhone，有23%左右的用户选择了Windows Phone。</p>
