--- a/share/weekly/2013-04-27/index.html
+++ b/share/weekly/2013-04-27/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>weekly - 2013.04 第四周</title>
+        <title>Mobile Information Weekly</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=1024" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
