--- a/share/weekly/2013-04-27/index.html
+++ b/share/weekly/2013-04-27/index.html
@@ -32,7 +32,7 @@
 
         <div id="impress">
             <div id="title" class="step" data-x="-4000" data-y="1000" data-rotate="90">
-                <h1>weekly</h1>
+                <h1>Mobile Information Weekly</h1>
                 <div class="footnote">
                     @ 黑幕困兽 / 张军<br />
                     2013-04-27
