--- a/share/responsive-design/index.html
+++ b/share/responsive-design/index.html
@@ -138,29 +138,29 @@
             <div class="step slide" data-x="-1000" data-y="1500" data-rotate="180">
                 <h3>Ⅲ、视觉设计UI视图</h3>
                 <div>
-                    <p>UI风格尽量简单，最好能让前端同学用CSS3实现；</p>
-                    <p>图标、背景应最好考虑纯色或者能够方便拉伸的渐变，避免维护两套、甚至多套图标；</p>
-                    <p>由于“响应式设计”常常需要通过百分比控制元素宽度，所以不要过分追求像素精准度。</p>
+                    <p><span>1、</span>UI风格尽量简单，最好能让前端同学用CSS3实现；</p>
+                    <p><span>2、</span>图标、背景应最好考虑纯色或者方便拉伸的渐变，避免维护多套图标和背景图片；</p>
+                    <p><span>3、</span>由于“响应式设计”常常需要通过百分比控制元素宽度，所以不要过分追求像素精准度。</p>
                 </div>
             </div>
 
             <div class="step slide" data-x="-2500" data-y="1500" data-rotate="180">
                 <h3>Ⅳ、前端HTML、CSS编码</h3>
                 <div>
-                    <p>设置Meta标签，避免页面自动缩放尺寸；</p>
-                    <p>抛弃传统的固定布局，使用流体的网格设计；</p>
-                    <p>灵活处理图片、视频媒体展现；</p>
-                    <p>使用媒体查询（Media Queries），为不同区间的分辨率做不同设计。</p>
+                    <p><span>1、</span>设置Meta标签，避免页面自动缩放尺寸；</p>
+                    <p><span>2、</span>抛弃传统的固定布局，使用流体的网格设计；</p>
+                    <p><span>3、</span>灵活处理图片、视频媒体展现；</p>
+                    <p><span>4、</span>使用媒体查询（Media Queries），为不同区间的分辨率做不同设计。</p>
                 </div>
             </div>
 
             <div class="step slide" data-x="-2500" data-y="2500" data-rotate="180">
                 <h3>Ⅴ、前后端联调数据</h3>
                 <div>
-                    <p>“响应式设计”</p>
-                    <p>抛弃传统的固定布局，使用流体的网格设计；</p>
-                    <p>灵活处理图片、视频媒体展现；</p>
-                    <p>使用媒体查询（Media Queries），为不同区间的分辨率做不同设计。</p>
+                    <p>后端开发与前端工程师协同起来，在“响应式设计”上也能做很多事情：</p>
+                    <p><span>1、</span>通过建立一个UA和分辨率匹配的库，能够判断用户访问的设备，从而做到加载不同的HTML结构、CSS样式。</p>
+                    <p><span>2、</span>为移动设备减少数据的输出。比如：PC每页显示20条数据，只给手机10条/页。</p>
+                    <p><span>3、</span>图片、视频媒体最消耗流量，同样需要为移动设备输出不同尺寸和格式的图片、视频。(PS:可以为移动设备尝试使用WebP图像格式)</p>
                 </div>
             </div>
             
