--- a/share/weekly/2013-04-27/index.html
+++ b/share/weekly/2013-04-27/index.html
@@ -183,13 +183,24 @@
                     </p>
                 </div>
             </div>
+
+            <div class="step slide" data-x="500" data-y="2500" data-rotate="180">
+                <h3>iPhone5 单车号角扬声器</h3>
+                <div>
+                    <p class="img"><img src="img/13.jpg" /></p>
+                    <p>这款Bone iPhone5 单车号角扬声器利用号角的原理，将音源集中后，引导音源传导方向，达到扩大音量的效果，使用后可提高13分贝，并且无需任何外接电源，响应环保，节能减碳。采用硅胶环保材质制作，可回收，不污染环境，爱护地球。
+                    </p>
+                    <p style="font-size:16px;">
+                       来源：<a href="http://www.700bike.com/23316.html">http://www.700bike.com/23316.html</a>
+                    </p>
+                </div>
+            </div>
             
-            <div id="tiny" class="step" data-x="1500" data-y="3000" data-z="-3000" data-rotate="360" data-scale="1">
+            <div id="tiny" class="step" data-x="3000" data-y="4000" data-z="-3000" data-rotate="360" data-scale="1">
                 <p style="color:#9D9D9D">Thank You！</p>
             </div>
 
-
-            <div id="overview" class="step" data-x="500" data-y="1500" data-scale="6"></div>
+            <div id="overview" class="step" data-x="200" data-y="1800" data-scale="6"></div>
             
         </div>
  		
