--- a/share/icon-font/index.html
+++ b/share/icon-font/index.html
@@ -13,9 +13,24 @@
 			@font-face {
 				font-family: 'Tao Jia';
 				src: url('taojia.ttf');
-		    } 
+		    }
+
+            /*Prettyprint Style*/
+            .prettyprint{margin-left:-265px;}
+            .str{color:#6EC82E!important;}
+            .kwd{color:white!important;}
+            .com{color:#D6D6D6!important;}
+            .typ{color:#f1915d!important;}
+            .lit{color:#F9265B!important;}
+            .pun{color:white!important;}
+            .pln{color:#53D9EF!important;}
+            .tag{color:#ffab58!important;}
+            .atn{color:#fabb4e!important;}
+            .atv{color:#ffd996!important;}
+            .dec{color:red!important;}
 			
-			.load-icon{ position:relative;}
+			/*Extra Style*/
+            .load-icon{ position:relative;}
 			.load-icon i{position:absolute;right:405px; top:94px;display:block; width:30px; height:20px;background:url(img/balls-24x12-trans.gif)  0 0 no-repeat;}
 			
 		    .list-icon{padding-bottom:20px;}
@@ -44,8 +59,6 @@
 			.c3{color:rgba(255,255,0,1);}
 			.c4 span{background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(61,42,27,0.7)), to(rgba(0,0,0,1)));color:transparent;-webkit-background-clip:text;}
 			.c5{color:rgba(255,255,255,1);text-shadow:-5px 4px 4px #000}
-			
-
 		</style>
         <script type="text/javascript" src="../../libs/jquery/jquery.1.3.2.js"></script>
     </head>
