--- a/share/responsive-design/index.html
+++ b/share/responsive-design/index.html
@@ -170,7 +170,7 @@
                     <p><span>Ⅰ、</span><a href="http://foundation.zurb.com/">Foundation</a> 它是一款易用、强大并且灵活的框架，用于创建运行于任何设备上的网站原型和最终产品代码。</p>
                     <p><span>Ⅱ、</span><a href="http://twitter.github.com/bootstrap/">Bootstrap</a> 它由Twitter构建，是快速开发Web应用程序的前端工具包，提供了完美的响应式设计方案。</p>
                     <p><span>Ⅲ、</span><a href="http://lessframework.com/">Lessframework</a> 它包含4个布局和3套预设布局,是一套自适应网站的CSS网格系统</p>
-                    <p><span>Ⅳ、</span><a href="http://lessframework.com/">320 and Up </a> 它使用一个小型屏幕样式表，以防止移动设备加载桌面资源。其中样式表中包含了一些颜色、排版布局等设置属性。 </p>
+                    <p><span>Ⅳ、</span><a href="http://stuffandnonsense.co.uk/projects/320andup/">320 and Up </a> 它使用一个小型屏幕样式表，以防止移动设备加载桌面资源。其中样式表中包含了一些颜色、排版布局等设置属性。 </p>
                 </div>
             </div>
 
@@ -244,7 +244,7 @@
             </div>
             
             <!--<div class="step slide" data-x="-1000" data-y="4500" data-rotate="180">
-                <pre class="prettyprint">
+                <p>
                     http://nmsdvid.com/snippets/
                     http://www.responsivegridsystem.com/
                     http://responsive-nav.com/
@@ -252,7 +252,7 @@
                     http://aiwei.us/web-database/responsive-she-ji-ce-shi-gong-ju
                     http://www.chinaz.com/free/2012/0514/251457.shtml
                     http://www.360doc.com/content/13/0201/09/9200790_263533825.shtml
-                </pre>
+                </p>
             </div>-->
 
             <div id="tiny" class="step" data-x="1500" data-y="5000" data-z="-3000" data-rotate="360" data-scale="1">
@@ -275,11 +275,9 @@
 		</script>
 
 		<script src="../../libs/impress.js/js/impress.js"></script>
-        <script src="../../libs/prettify/prettify.js"></script>
 		<script>
         $(document).ready(function() {
             impress().init();
-            prettyPrint();
         });
         </script>
         
