--- a/demo/css3/css 3d carousel gallery/index.html
+++ b/demo/css3/css 3d carousel gallery/index.html
@@ -34,7 +34,7 @@
 <body>
 	<div style="max-width: 770px;margin: 0 auto;">
 		<div id="gallery">
-			<div id="spinner">
+			<figure id="spinner">
 				<img src="../../../static/page/1.jpg" alt="" />
 				<img src="../../../static/page/2.jpg" alt="" />
 				<img src="../../../static/page/3.jpg" alt="" />
@@ -43,7 +43,7 @@
 				<img src="../../../static/page/6.jpg" alt="" />
 				<img src="../../../static/page/7.jpg" alt="" />
 				<img src="../../../static/page/8.jpg" alt="" />
-			</div>
+			</figure>
 		</div>
 		
 	</div>
