--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -77,15 +77,15 @@
   <div class="step top" data-x="4500" data-y="-1500" data-z="4000" data-rotate="180" data-scale="3">
 
     <div class="number"><img src="img/1.jpg"></div>
-    <h1>贝 勒 </h1>
-    <p>前端老大；Vim、兵乓球高手</p>
+    <h1>贝 勒</h1>
+    <p>前端老大；兵乓球很厉害</p>
 
   </div>
 
   <div class="step top" data-x="4500" data-y="-3000" data-z="8000" data-scale="3">
 
-    <div class="number"><img src="img/2.jpg"></div>
-    <h1>青 叶 </h1>
+    <div class="number"><img src="img/2.png"></div>
+    <h1>青 叶</h1>
     <p>家庭主男；烧得一桌好饭菜</p>
 
   </div>
@@ -93,7 +93,7 @@
   <div class="step top" data-x="4500" data-y="-4500" data-z="12000" data-rotate="180" data-scale="3">
 
     <div class="number"><img src="img/3.gif"></div>
-    <h1>临 风 </h1>
+    <h1>临 风</h1>
     <p>台球小王子；独孤求败</p>
 
   </div>
@@ -197,8 +197,8 @@
     <h1>前端要逆袭！</h1>
     <ol>
       <li>IE6的市场比重降低</li>
-      <li>离线web应用 (Web App)</li>
-      <li>响应式网页设计</li>
+      <li>离线Web应用、WebGL (Web App、Web Game)</li>
+      <li>响应式网页设计的流行</li>
       <li>Node.js让JavaScript从浏览器端解脱</li>
       <li>......</li>
     <ol>
