--- a/share/index.html
+++ b/share/index.html
@@ -15,6 +15,7 @@
             <div>
                 <p><a href="./responsive-design/index.html">响应式Web设计</a></p>
                 <p><a href="./icon-font/index.html">Icon Font</a></p>
+                <p><a href="./MOGU-F2E/index.html">MOGU-F2E</a></p>
             </div>
             
             <h5>移动资讯</h5>
