--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -4,10 +4,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>HTML5, to infinity and beyond!</title>
+  <title>MOGU - F2E</title>
 
-  <meta name="description" content="3D interactive presentation containing 10 HTML5 innovations.">
-  <meta name="author" content="Sylvain Weber" />
+  <meta name="description" content="MOGU - F2E">
+  <meta name="author" content="cssoul" />
 
   <link href="http://fonts.googleapis.com/css?family=Exo:400,700" rel="stylesheet" />
 
@@ -18,8 +18,7 @@
 <div id="impress" class="impress-not-supported">
 
   <div class="fallback-message">
-    <p>Your browser <b>doesn't support all the features required</b>, so you are presented with a simplified version of this presentation.</p>
-    <p>For the best experience please use the latest <b>Chrome</b> or <b>Safari</b> browser. Firefox 10 (to be released soon) will also handle it.</p>
+    <p>你的浏览器不支持！请下载最新版的Chrome再浏览...</p>
   </div>
 
 
@@ -70,7 +69,7 @@
 
   <div class="step" id="install" data-x="4500" data-y="-1500">
 
-    <h1 style="margin-top:200px">首先介绍一下我们团队成员</h1>
+    <h1 style="margin-top:200px">先介绍一下我们团队成员</h1>
 
   </div>
 
