--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -107,7 +107,7 @@
 
   <div class="step top" data-x="6000" data-y="-8500" data-z="18000" data-rotate="180" data-scale="3">
 
-    <div class="number"><img src="img/4.jpg"></div>
+    <div class="number"><!-- <img src="img/4.jpg">< -->/div>
     <h1>泰 勒</h1>
     <p>爱旅游；摄影大师</p>
 
@@ -133,7 +133,7 @@
 
     <div class="number"><img src="img/8.jpg"></div>
     <h1>菟 丝</h1>
-    <p></p>
+    <p>是个好人</p>
 
   </div>
 
@@ -158,36 +158,36 @@
 
   <div class="step" data-x="25000" data-y="-1500" data-z="40000">
 
-  <h1>我们做些什么？</h1>
+    <h1>我们做些什么？</h1>
 
-  <ol>
-    <li>视觉还原 （HTML、CSS）</li>
-    <li>交互实现 （Javascript、Ajax、JSON）</li>
-    <li>浏览器兼容性 （HTML、CSS、Javascript...）</li>
-    <li>页面可访问性 （SEO、浏览器、读平软件...）</li>
-  </ol>
+    <ol>
+      <li>视觉还原 （HTML、CSS）</li>
+      <li>交互实现 （Javascript、Ajax、JSON）</li>
+      <li>浏览器兼容性 （HTML、CSS、Javascript...）</li>
+      <li>页面可访问性 （SEO、浏览器、读平软件...）</li>
+    </ol>
 
   </div>
 
   <div class="step" data-x="26500" data-y="-1500" data-z="40000">
 
-  <h1>我们用什么工具？</h1>
+    <h1>我们用什么工具？</h1>
 
-  <ol>
-    <li>切图片 （PhotoShop、FireWorks...） </li>
-    <li>编写代码 （Dreamweaver、Sublime Text2、 VIM...）</li>
-    <li>代码压缩、合并 （YUICompressor、spm、Grunt...）</li>
-    <li>单元测试 （Jasmine、Qunit、YUITest...）</li>
-  </ol>
+    <ol>
+      <li>切图片 （PhotoShop、FireWorks...） </li>
+      <li>编写代码 （Dreamweaver、Sublime Text2、 VIM...）</li>
+      <li>代码压缩、合并 （YUICompressor、spm、Grunt...）</li>
+      <li>单元测试 （Jasmine、Qunit、YUITest...）</li>
+    </ol>
 
   </div>
 
   <div class="step" data-x="28000" data-y="-1500" data-z="40000">
 
-  <div class="pic">
-    <img src="img/html-css.jpg">
-    <h1>我们还能做些什么？</h1>
-  </div>
+    <div class="pic">
+      <img src="img/html-css.jpg">
+      <h1>我们还能做些什么？</h1>
+    </div>
 
   </div>
 
@@ -215,14 +215,14 @@
 
   </div> -->
 
-  <div class="step" id="end" data-x="31000" data-y="-1500" data-z="40000">
+   <div class="step" id="end" data-x="-1000" data-y="-1500" data-z="10000">
 
     <h1 style="margin-top:150px;text-align:center;">Thanks!</h1>
 
   </div>
 
-  <div id="overview" class="step" data-x="3000" data-y="-1000" data-scale="10" data-rotate="180"></div>
-
+  <!-- <div id="overview" class="step" data-x="3000" data-y="-13000" data-scale="50" data-rotate="180"></div>
+ -->
 </div>
 
 <script src="impress.js"></script>
