--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -85,7 +85,7 @@
 
     <div class="number"><img src="img/2.png"></div>
     <h1>青 叶</h1>
-    <p>家庭主男；烧得一桌好饭菜</p>
+    <p>玩死飞；烧得一桌好饭菜</p>
 
   </div>
 
