--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -75,7 +75,7 @@
 
   <div class="step top" data-x="4500" data-y="-1500" data-z="4000" data-rotate="180" data-scale="3">
 
-    <div class="number"><img src="img/1.jpg"></div>
+    <div class="number"><img src="img/1.png"></div>
     <h1>贝 勒</h1>
     <p>前端老大；兵乓球很厉害</p>
 
