--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -69,7 +69,7 @@
 
   <div class="step" id="install" data-x="4500" data-y="-1500">
 
-    <h1 style="margin-top:200px">先介绍一下我们团队成员</h1>
+    <h1 style="margin-top:250px">先介绍一下其他成员</h1>
 
   </div>
 
@@ -77,7 +77,7 @@
 
     <div class="number"><img src="img/1.png"></div>
     <h1>贝 勒</h1>
-    <p>前端老大；兵乓球很厉害</p>
+    <p>前端老大；兵乓球高手</p>
 
   </div>
 
@@ -171,7 +171,7 @@
 
   <div class="step" data-x="26500" data-y="-1500" data-z="40000">
 
-    <h1>我们用什么工具？</h1>
+    <h1>我们用哪些工具？</h1>
 
     <ol>
       <li>切图片 （PhotoShop、FireWorks...） </li>
