--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -52,8 +52,8 @@
     <h1>Before beginning</h1>
 
     <ul>
-      <li>我爱好骑行，所以建了一个QQ群，带动我们组几个有单车的出去溜了两圈。如果你也喜欢骑行，欢迎加入：328868198 </li>
-      <li>我也会玩一玩桌上足球，如果缺人可以叫上我 ！</li>
+      <li>我爱好骑行，前段时间和组内有单车的同学出去溜了两圈。如果你也喜欢骑行，欢迎加入我们的QQ群：328868198 </li>
+      <li>我也会玩一玩桌上足球，如果缺人可以叫上我～ </li>
     </ul>
 
     <img src="img/troll.png" />
