--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -164,7 +164,7 @@
       <li>视觉还原 （HTML、CSS）</li>
       <li>交互实现 （Javascript、Ajax、JSON）</li>
       <li>浏览器兼容性 （HTML、CSS、Javascript...）</li>
-      <li>页面可访问性 （SEO、浏览器、读平软件...）</li>
+      <li>页面可访问性 （SEO、浏览器、读屏软件...）</li>
     </ol>
 
   </div>
