--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -109,7 +109,7 @@
 
     <div class="number"><!-- <img src="img/4.jpg"> --></div>
     <h1>泰 勒</h1>
-    <p>爱旅游；摄影大师</p>
+    <p>热爱旅游、摄影</p>
 
   </div>
 
