--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -107,7 +107,7 @@
 
   <div class="step top" data-x="6000" data-y="-8500" data-z="18000" data-rotate="180" data-scale="3">
 
-    <div class="number"><!-- <img src="img/4.jpg"> --></div>
+    <div class="number"><img src="img/5.jpg"></div>
     <h1>泰 勒</h1>
     <p>热爱旅游、摄影</p>
 
