--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -91,7 +91,7 @@
 
   <div class="step top" data-x="4500" data-y="-4500" data-z="12000" data-rotate="180" data-scale="3">
 
-    <div class="number"><img src="img/3.gif"></div>
+    <div class="number"><img src="img/3.jpg"></div>
     <h1>临 风</h1>
     <p>台球小王子；独孤求败</p>
 
