--- a/share/MOGU-F2E/index.html
+++ b/share/MOGU-F2E/index.html
@@ -56,12 +56,13 @@
       <li>我也会玩一玩桌上足球，如果缺人可以叫上我～ </li>
     </ul>
 
-    <img src="img/troll.png" />
+    <img src="img/code.jpg" width="250" style="left:60px;right:auto" alt="QQ群二维码" />
   </div>
 
   <div class="step" id="troll" data-x="3000" data-y="-1500" data-rotate="180">
 
     <h1 style="margin-top:200px">START</h1>
+
     <img src="img/dog.jpg" />
 
   </div>
@@ -70,6 +71,7 @@
   <div class="step" id="install" data-x="4500" data-y="-1500">
 
     <h1 style="margin-top:250px">先介绍一下其他成员</h1>
+    <img src="img/troll.png" />
 
   </div>
 
