update by tianming

--- a/demo/mogu-v3/index.html
+++ b/demo/mogu-v3/index.html
@@ -14,15 +14,15 @@
         <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px)" href="/imgwap/startup/640x920.jpg" />
         <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px)" href="/imgwap/startup/640x1096.jpg" />
 
-        <link rel="stylesheet" href="http://ued.mogujie.com/cssmobile3/combo/cssmobile3-combo-min.css" />
-        <link rel="stylesheet" href="demo.css" />
+        <link rel="stylesheet" href="css/cssmobile3-combo-min.css" />
+        <link rel="stylesheet" href="css/demo.css" />
 
     </head>
 
     <body>
         <div class="container"> 
             <h1 class="demo-logo">
-              <div class="logo"><img src="http://m.mogujie.com/imgwap/icon/114x114.png" width="100" /></div>
+              <div class="logo"><img src="imgwap/icon/114x114.png" width="100" /></div>
               <p>蘑菇街WAP<small> — 全站基本CSS样式</small></p>
             </h1>
 
