--- a/demo/mogu-v3/index.html
+++ b/demo/mogu-v3/index.html
@@ -14,8 +14,8 @@
         <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px)" href="/imgwap/startup/640x920.jpg" />
         <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px)" href="/imgwap/startup/640x1096.jpg" />
 
-        <link rel="stylesheet" href="css/cssmobile3-combo-min.css" />
-        <link rel="stylesheet" href="css/demo.css" />
+        <link rel="stylesheet" href="cssmobile3-combo-min.css" />
+        <link rel="stylesheet" href="demo.css" />
 
     </head>
 
