--- a/demo/mogu-v3/index.html
+++ b/demo/mogu-v3/index.html
@@ -2,18 +2,9 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>蘑菇街 - 做最喜欢的自己</title>
+        <title>蘑菇街WAP - 全站基本CSS样式</title>
         <meta name="apple-mobile-web-app-title" content="蘑菇街Wap版" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-        <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,user-scalable=no" media="(device-height: 568px)" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="grey" />
-        <link rel="apple-touch-icon-precomposed" href="/imgwap/icon/57x57.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/imgwap/icon/114x114.png" />
-        <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px)" href="/imgwap/startup/640x920.jpg" />
-        <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px)" href="/imgwap/startup/640x1096.jpg" />
-
         <link rel="stylesheet" href="cssmobile3-combo-min.css" />
         <link rel="stylesheet" href="demo.css" />
 
