--- a/demo/mogu-v3/index.html
+++ b/demo/mogu-v3/index.html
@@ -1,13 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta charset="utf-8" />
         <title>蘑菇街WAP - 全站基本CSS样式</title>
-        <meta name="apple-mobile-web-app-title" content="蘑菇街Wap版" />
         <meta name="format-detection" content="telephone=no" />
         <link rel="stylesheet" href="cssmobile3-combo-min.css" />
         <link rel="stylesheet" href="demo.css" />
-
     </head>
 
     <body>
