--- a/demo/mogu-v3/index.html
+++ b/demo/mogu-v3/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>蘑菇街WAP - 全站基本CSS样式</title>
         <meta name="format-detection" content="telephone=no" />
-        <link rel="stylesheet" href="cssmobile3-combo-min.css" />
+        <link rel="stylesheet" href="cssmobile3-combo-min.css?v=0.0.3" />
         <link rel="stylesheet" href="demo.css" />
     </head>
 
