--- a/share/weekly/index.html
+++ b/share/weekly/index.html
@@ -12,6 +12,7 @@
     <body>
         <div>
             <p><a href="./2013-04-27/index.html">Weekly 2013-04-27</a></p>
+            <p><a href="./2014-06-04/index.html">Weekly 2014-06-04</a></p>
         </div>
         
 	</body>
