--- a/demo/olu/less/index.html
+++ b/demo/olu/less/index.html
@@ -6,15 +6,21 @@
     <style type="text/css">
     	*{margin: 0;padding: 0;}
         h1{
-            color: #333;
-            font-size: 16px;
+            height: 50px;
+            line-height: 50px;
+            text-indent: 20px;
+            color: #444;
+            font-size: 20px;
             border-bottom: 1px solid #eee;
         }
         div{
+            font-size: 12px;
             margin-top: 10px;
+            color: #555;
         }
         p{
             margin-bottom: 5px;
+            padding-left: 20px;
         }
     </style>
 </head>
