--- a/demo/olu/less/index.html
+++ b/demo/olu/less/index.html
@@ -15,12 +15,16 @@
         }
         div{
             font-size: 14px;
-            margin-top: 10px;
+            margin-top: 15px;
             color: #555;
         }
         p{
             margin-bottom: 6px;
+            line-height: 24px;
             padding-left: 20px;
+        }
+        a{
+            color: #0000f9;
         }
     </style>
 </head>
