update css translate 2d

--- a/demo/olu/less/widget/tips/demo.html
+++ b/demo/olu/less/widget/tips/demo.html
@@ -30,6 +30,23 @@
         .example p{
             margin-bottom: 15px;text-align: center;
         }
+        
+        .ui-tips {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          min-width: 100px;
+          z-index: 10000;
+          text-align: center;
+          padding: 10px 12px;
+          line-height: 1.428571429;
+          color: #ffffff;
+          background: rgba(225, 42, 82, 0.7);
+
+          -webkit-transform: translateX(-50%);
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+        }
     </style>
 </head>
 <body>
