update css translate 2d

--- a/demo/olu/less/widget/tips/demo.html
+++ b/demo/olu/less/widget/tips/demo.html
@@ -30,9 +30,9 @@
         .example p{
             margin-bottom: 15px;text-align: center;
         }
-        
+
         .ui-tips {
-          position: absolute;
+          position: fixed;
           left: 50%;
           top: 50%;
           min-width: 100px;
