update css translate 2d

--- a/demo/olu/less/widget/tips/demo.html
+++ b/demo/olu/less/widget/tips/demo.html
@@ -31,7 +31,7 @@
             margin-bottom: 15px;text-align: center;
         }
 
-        .ui-tips {
+        .ui-tip {
           position: fixed;
           left: 50%;
           top: 50%;
@@ -55,7 +55,7 @@
         <p class="description">全站通用Tips组件 ~</p>
         <div class="example">
             <img src="http://s16.mogucdn.com/b7/pic/131130/r4w1b_kqzeorkfkrbdiqkugfjeg5sckzsew_533x800.jpg_468x468.jpg" width="100%" />
-            <div class="ui-tips">这是一个提示文本~</div>
+            <div class="ui-tip">这是一个提示文本~</div>
         </div>
     </div>
 
