--- a/demo/olu/less/widget/tips/demo.html
+++ b/demo/olu/less/widget/tips/demo.html
@@ -33,19 +33,27 @@
 
         .ui-tip {
           position: fixed;
-          left: 50%;
-          top: 50%;
-          min-width: 100px;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          display: -webkit-box;
+            -webkit-box-orient: horizontal;
+            -webkit-box-pack: center;
+            -webkit-box-align: center;
+          
           z-index: 10000;
-          text-align: center;
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+        }
+        .ui-tip span{
+            display: inline-block;
+            min-width: 100px;
+            text-align: center;
           padding: 10px 12px;
           line-height: 1.428571429;
           color: #ffffff;
           background: rgba(225, 42, 82, 0.7);
-
-          -webkit-transform: translateX(-50%);
-          -webkit-border-radius: 3px;
-          border-radius: 3px;
         }
     </style>
 </head>
@@ -55,7 +63,7 @@
         <p class="description">全站通用Tips组件 ~</p>
         <div class="example">
             <img src="http://s16.mogucdn.com/b7/pic/131130/r4w1b_kqzeorkfkrbdiqkugfjeg5sckzsew_533x800.jpg_468x468.jpg" width="100%" />
-            <div class="ui-tip">这是一个提示文本~</div>
+            <div class="ui-tip"><span>这是一个提示文本~</span></div>
         </div>
     </div>
 
