--- a/demo/olu/less/widget/tips/demo.html
+++ b/demo/olu/less/widget/tips/demo.html
@@ -30,31 +30,6 @@
         .example p{
             margin-bottom: 15px;text-align: center;
         }
-
-        .ui-tip {
-          position: fixed;
-          left: 0;
-          top: 0;
-          width: 100%;
-          height: 100%;
-          display: -webkit-box;
-            -webkit-box-orient: horizontal;
-            -webkit-box-pack: center;
-            -webkit-box-align: center;
-          
-          z-index: 10000;
-          -webkit-border-radius: 3px;
-          border-radius: 3px;
-        }
-        .ui-tip span{
-            display: inline-block;
-            min-width: 100px;
-            text-align: center;
-          padding: 10px 12px;
-          line-height: 1.428571429;
-          color: #ffffff;
-          background: rgba(225, 42, 82, 0.7);
-        }
     </style>
 </head>
 <body>
@@ -63,7 +38,7 @@
         <p class="description">全站通用Tips组件 ~</p>
         <div class="example">
             <img src="http://s16.mogucdn.com/b7/pic/131130/r4w1b_kqzeorkfkrbdiqkugfjeg5sckzsew_533x800.jpg_468x468.jpg" width="100%" />
-            <div class="ui-tip"><span>这是一个提示文本~</span></div>
+            <div class="ui-tips"><span class="ui-tips-text">这是一个提示文本~</span></div>
         </div>
     </div>
 
