--- a/demo/olu/less/widget/tips/demo.html
+++ b/demo/olu/less/widget/tips/demo.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 	<meta name="MobileOptimized" content="320">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link rel="stylesheet" type="text/css" href="../../../dist/css/base.css" media="all">
-    <link rel="stylesheet" type="text/css" href="../../../dist/css/mgui.css" media="all">
+	<link rel="stylesheet" type="text/css" href="../../../../../../public/mods/si-x6-router/dist/css/base.css" media="all">
+    <link rel="stylesheet" type="text/css" href="../../../../../../public/mods/si-x6-router/dist/css/mgui.css" media="all">
 
     <style>
         #main{
